--- a/config.sample.json
+++ b/config.sample.json
@@ -1,8 +1,8 @@
 {
     "default_server_config": {
         "m.homeserver": {
-            "base_url": "https://matrix-client.matrix.org",
-            "server_name": "matrix.org"
+            "base_url": "http://localhost:8008",
+            "server_name": "secure.deme.group"
         },
         "m.identity_server": {
             "base_url": "https://vector.im"
@@ -30,7 +30,7 @@
     "default_federate": true,
     "default_theme": "light",
     "room_directory": {
-        "servers": ["matrix.org"]
+        "servers": ["secure.deme.group"]
     },
     "enable_presence_by_hs_url": {
         "https://matrix.org": false,
